fixed width of about section on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@
 
   #about{
     flex-direction:column;
-    width:90%;
+    width:100%;
   }
 
   .flipped-header{
@@ -88,6 +88,10 @@
     padding:1rem 2rem 1rem 2rem;
     font-size:0.8rem;
     margin:0;
+  }
+
+  .about-container{
+    width:100%;
   }
 }
 
